--- a/src/app/imdb-movie/imdb-movie.component.html
+++ b/src/app/imdb-movie/imdb-movie.component.html
@@ -1,6 +1,16 @@
+<div *ngFor="let data of movie" class="card">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="{{data.img_url}}">
+  </div>
+  <div class="card-content">
+    <span class="card-title activator black-text text-da-4">{{data.title}}<i
+        class="material-icons">keyboard_arrow_up</i></span>
+    <span class="card-title activator black-text text-da-4">Rating:{{data.users_rating}}</span>
 
-
-<div >
-    movies : {{movie.title}}
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">{{data.title}}<i class="material-icons right">close</i></span>
+    <p>{{data.description}}</p>
+  </div>
 </div>
 <!-- *ngFor="let tittle of movie | async" -->
